# usleep-adaptation

./: .gitignore  ckpt_printer.py  config.yaml  configGPT.yaml  conv_adapter_parameters.py  create_data_loader.py  demo.json  experiment_counter.py  experiment_setup.py  experiment_setup_new.py  experiment_validator.py  fine_tune_model.py  fine_tune_usleep.py  hdf5_printer.py  hdf5dataset.py  main.py  mainResnet.py  main_new.py  meets.rmd  minimal_example.py  opgave.txt  pyproject.toml  requirements.txt  result_notes.txt  ttest.py
csdp/csdp_datastore/: base.py  dcsm.py  logger.py  models.py  phys.py  svuh.py
csdp/csdp_pipeline/: __init__.py
csdp/csdp_training/: __init__.py  utility.py
data/: README.md
data/ckpt/: simple_linear_one.ckpt
data/splits/: eesm_example.json
lightning_logs/version_1/: metrics.csv
lightning_logs/version_5/: hparams.yaml
lightning_logs/version_6/: hparams.yaml
results/: eesm19_bitfit_usleep_usleep.json  eesm19_bitfit_usleep_usleep_debug.json  eesm19_bitfit_usleep_usleep_debug_1.json
results/eesm19/: BatchNorm.json  BitFit.json  Fish 10.json  Fish 20.json  Fish 50.json  Full.json  LoRA10.json  LoRA25.json  LoRA5.json  PCA15.json  PCA3.json  PCA8.json  PCL15.json  PCL3.json  PCL8.json  SCA15.json  SCA3.json  SCA8.json  SCL15.json  SCL3.json  SCL8.json  SegCls.json
src/: experiment.py  experiment_runner.py  forward_test.py
src/concrete/: standard_adapter.py  standard_data_creater.py  standard_dataload_creater.py  standard_fine_tuner.py  standard_model_loader.py  standard_model_trainer.py  standard_model_updater.py  usleep_data_creater.py
src/config/: _adapter_config.py  _adapter_setting.py  _checkpoint_config.py  _data_config.py  _data_settings.py  _early_stopping_setting.py  _model_config.py  _optimizer_setting.py  _registries.py  _trainer_config.py  _validators.py  config.py  experiment.py  utils.py
src/csdp_training/: __init__.py  utility.py
src/interfaces/: adapter.py  data_creater.py  dataload_creater.py  fine_tuner.py  framework_model.py  model_loader.py  model_trainer.py  model_updater.py  preloader.py
src/models/: base_usleep.py  conv_simple.py  resnet.py  simple.py  usleep.py
src/plot/: colors.py  convergence_time.py  convergence_time_per_method.py  delta_kappa.py  delta_kappa_table.py  delta_kappa_training_size.py  methods.py  (+12 more)
(+657 files in other folders)
