[project]
name = "usleep-adaptation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.13.0",
    "lightning>=2.5.0.post0",
    "loralib>=0.1.2",
    "numpy>=1.17.3",
    "peft>=0.14.0",
    "pydantic>=2.10.6",
    "scikit-learn>=1.3.2",
    "scipy>=1.11.4",
    "torch>=2.6.0",
    "torchvision>=0.20.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126" },
]
torchvision = [
    { index = "pytorch-cu126" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
