[project]
name = "usleep-adaptation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.7"
dependencies = [
    "dotenv>=0.9.9",
    "h5py>=3.13.0",
    "lightning>=2.5.0.post0",
    "matplotlib>=3.10.1",
    "neptune>=1.13.0",
    "numpy>=1.17.3",
    "peft",
    "polars>=1.26.0",
    "pyarrow>=19.0.1",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.3.2",
    "scipy>=1.11.4",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "torchvision>=0.20.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126" },
]
torchvision = [
    { index = "pytorch-cu126" },
]
peft = { git = "https://github.com/huggingface/peft.git", branch = "main" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
